tests/rustdoc-ui/doctest/test-compile-fail2.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/test-compile-fail2.rs:3:1
   |
LL | fail
   | ^^^^ expected one of `!` or `::`

error: aborting due to 1 previous error

